# opensim-core

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
OpenSim/Examples/subject1_2D/: CMakeLists.txt  ID_Standing_ModelWithContact.sto  ID_Standing_ModelWithContact_heels.sto  ID_Standing_ModelWithContact_toes.sto  ID_Standing_ModelWithContact_toes_2D.sto  ID_Standing_ModelWithoutContact_GRF.sto  ID_Standing_ModelWithoutContact_GRF_GRM.sto  ID_Standing_ModelWithoutContact_GRF_GRM_heels.sto  ID_Standing_ModelWithoutContact_GRF_GRM_toes.sto  ID_Standing_ModelWithoutContact_GRF_GRM_toes_2D.sto  Setup_Standing_ModelWithContact.xml  Setup_Standing_ModelWithContact_heels.xml  Setup_Standing_ModelWithContact_toes.xml  Setup_Standing_ModelWithContact_toes_2D.xml  Setup_Standing_ModelWithoutContact_GRF.xml  Setup_Standing_ModelWithoutContact_GRF_GRM.xml  Setup_Standing_ModelWithoutContact_GRF_GRM_heels.xml  Setup_Standing_ModelWithoutContact_GRF_GRM_toes.xml  Setup_Standing_ModelWithoutContact_GRF_GRM_toes_2D.xml  Standing_GRF.mot  Standing_GRF.xml  Standing_GRF_GRM.mot  Standing_GRF_GRM.xml  Standing_GRF_GRM_heels.mot  Standing_GRF_GRM_heels.xml  Standing_GRF_GRM_toes.mot  Standing_GRF_GRM_toes.xml  Standing_GRF_GRM_toes_2D.mot  Standing_GRF_GRM_toes_2D.xml  Standing_Posture.mot  subject1_2D.cpp  subject1_scaled.osim  subject1_scaled_contacts.osim  subject1_scaled_contacts_heels.osim  subject1_scaled_contacts_toes.osim  subject1_scaled_contacts_toes_2D.osim
OpenSim/Examples/testShoulder/: CMakeLists.txt  ThoracoscapularShoulderModel.osim  testShoulder.cpp
OpenSim/External_Functions/: CMakeLists.txt  README.md
OpenSim/External_Functions/AcrobotPlanar/: AcrobotPlanar.cpp  CMakeLists.txt
OpenSim/External_Functions/DummyModel/: CMakeLists.txt  DummyModel.cpp
OpenSim/External_Functions/Giacomo_IMU_0/: CMakeLists.txt  Giacomo_IMU_0.cpp
OpenSim/External_Functions/Giacomo_IMU_0_FK/: CMakeLists.txt  Giacomo_IMU_0_FK.cpp
OpenSim/External_Functions/Giacomo_IMU_0_FK_noArms/: CMakeLists.txt  Giacomo_IMU_0_FK_noArms.cpp
OpenSim/External_Functions/Giacomo_IMU_1_FK_noArms/: CMakeLists.txt  Giacomo_IMU_1_FK_noArms.cpp
OpenSim/External_Functions/Giacomo_IMU_2_FK_noArms/: CMakeLists.txt  Giacomo_IMU_2_FK_noArms.cpp
OpenSim/External_Functions/Giacomo_IMU_3_FK_noArms/: CMakeLists.txt  Giacomo_IMU_3_FK_noArms.cpp
OpenSim/External_Functions/Giacomo_IMU_4_FK_noArms/: CMakeLists.txt  Giacomo_IMU_4_FK_noArms.cpp
OpenSim/External_Functions/Giacomo_IMU_5_FK_noArms/: CMakeLists.txt  Giacomo_IMU_5_FK_noArms.cpp
OpenSim/External_Functions/PredSim/: CMakeLists.txt  PredSim.cpp
cgeneration/: CMakeLists.txt  MatlabCommand.bat  README.md  README.txt  generate_dll.ps1  generate_dll.py  generate_foo_jac.m
cgeneration/DummyModel/: CMakeLists.txt  generateMain.m
cgeneration/Giacomo_IMU_0/: CMakeLists.txt  foo_0.m  foo_Minus1.m  foo_jac_0.c  foo_jac_1.c
cgeneration/Giacomo_IMU_0_FK/: CMakeLists.txt
cgeneration/Giacomo_IMU_0_FK_noArms/: CMakeLists.txt  generateMain.m
cgeneration/Giacomo_IMU_1_FK_noArms/: CMakeLists.txt
cgeneration/Giacomo_IMU_2_FK_noArms/: CMakeLists.txt
cgeneration/Giacomo_IMU_3_FK_noArms/: CMakeLists.txt
cgeneration/Giacomo_IMU_4_FK_noArms/: CMakeLists.txt
cgeneration/Giacomo_IMU_5_FK_noArms/: CMakeLists.txt  generateMain.m
cgeneration/PredSim_CP/: CMakeLists.txt  generateMain.m
cgeneration/PredSim_mtp/: CMakeLists.txt
cgeneration/PredSim_mtpPin_cm0/: CMakeLists.txt
cgeneration/PredSim_mtpPin_cm2/: CMakeLists.txt
cgeneration/PredSim_mtpPin_cm3/: CMakeLists.txt
cgeneration/PredSim_mtpPin_cm4/: CMakeLists.txt
cgeneration/PredSim_mtpPin_pp_cm0/: CMakeLists.txt
cgeneration/PredSim_mtpPin_pp_cm2/: CMakeLists.txt
cgeneration/PredSim_mtpPin_pp_cm3/: CMakeLists.txt
cgeneration/PredSim_mtpPin_pp_cm4/: CMakeLists.txt
cgeneration/PredSim_mtp_pp/: CMakeLists.txt
cgeneration/PredSim_no_mtpPin_cm0/: CMakeLists.txt
cgeneration/PredSim_no_mtpPin_cm3/: CMakeLists.txt
cgeneration/PredSim_no_mtpPin_cm5/: CMakeLists.txt
cgeneration/PredSim_no_mtpPin_cm6/: CMakeLists.txt
cgeneration/PredSim_no_mtpPin_pp_cm0/: CMakeLists.txt
cgeneration/PredSim_no_mtpPin_pp_cm3/: CMakeLists.txt
cgeneration/PredSim_no_mtpPin_pp_cm5/: CMakeLists.txt
cgeneration/PredSim_no_mtpPin_pp_cm6/: CMakeLists.txt
cgeneration/PredSim_v2/: CMakeLists.txt
cgeneration/PredSim_v2_pp/: CMakeLists.txt
cgeneration/TrackSim_mtpPin_1/: CMakeLists.txt  generateMain.m
cgeneration/TrackSim_mtpPin_2_4cs/: CMakeLists.txt
cgeneration/TrackSim_mtpPin_2_5csb/: CMakeLists.txt  generateMain.m
cgeneration/TrackSim_mtpPin_2_6cs/: CMakeLists.txt
cgeneration/TrackSim_mtp_1/: CMakeLists.txt
cgeneration/TrackSim_mtp_2/: CMakeLists.txt  generateMain.m
cgeneration/TrackSim_mtp_2_4cs/: CMakeLists.txt  generateMain.m
cgeneration/TrackSim_mtp_2_4csb/: CMakeLists.txt
cgeneration/TrackSim_mtp_2_5cs/: CMakeLists.txt
cgeneration/TrackSim_mtp_2_5csb/: CMakeLists.txt
cgeneration/findCurrentSensorError/: foo_F.m  foo_T.m  generate_foo_jac.asv  generate_foo_jac.m
cgeneration/s1_2D_3cs_ss3_FK_HA/: CMakeLists.txt
cgeneration/s1_2D_3cs_ss3_FK_HA_pp/: CMakeLists.txt
cgeneration/subject1_2D/: CMakeLists.txt
cgeneration/subject1_2D_2cs/: CMakeLists.txt
cgeneration/subject1_2D_2cs_ss1/: CMakeLists.txt
cgeneration/subject1_2D_3cs/: CMakeLists.txt
cgeneration/subject1_2D_3cs_ss3/: CMakeLists.txt
cgeneration/subject1_2D_3cs_ss3 _FK_pp/: CMakeLists.txt
cgeneration/subject1_2D_3cs_ss3_FK/: CMakeLists.txt
cgeneration/subject1_2D_track1/: CMakeLists.txt  generateMain.m
cgeneration/subject1_2D_track2/: CMakeLists.txt  generateMain.m
cgeneration/subject1_2D_track2_2cs/: CMakeLists.txt  generateMain.m
cgeneration/subject1_2D_track2_3cs/: CMakeLists.txt
cgeneration/testAntoine/: CMakeLists.txt  generateMain.m
cgeneration/video_subject1_A/: CMakeLists.txt
cgeneration/video_subject1_A_tread/: CMakeLists.txt
cgeneration/video_subject1_B/: CMakeLists.txt
cgeneration/video_subject1_C/: CMakeLists.txt
cgeneration/video_subject1_pp/: CMakeLists.txt
(+493 files in other folders)
