include_directories(${OpenSim_SOURCE_DIR}
                    ${OpenSim_SOURCE_DIR}/Vendors)
                    
option(BUILD_EXTERNAL_FUNCTIONS
    "Build external functions" ON)
					
if(BUILD_EXTERNAL_FUNCTIONS)    
    add_subdirectory(PredSim)
    add_subdirectory(PredSim_pp)
    add_subdirectory(PredSim_SSCM)
    add_subdirectory(PredSim_SSCM_pp)
    add_subdirectory(TrackSim_1)
    add_subdirectory(TrackSim_2)
    add_subdirectory(PredSimProsthesis)
    add_subdirectory(PredSimProsthesis_pp)
    add_subdirectory(PredSim_v2)
    add_subdirectory(PredSim_v2_pp)
    add_subdirectory(PredSim_2D)
    add_subdirectory(PredSim_2D_pp)
    add_subdirectory(video_s1_A_tread_KA)
    add_subdirectory(video_s1_C_tread_KA)
    add_subdirectory(video_s1_tread_KA_pp)
    add_subdirectory(video_s1_A_tread)
    add_subdirectory(video_s1_B_tread)
    add_subdirectory(video_s1_C_tread)
    add_subdirectory(video_s1_tread_pp)
    add_subdirectory(video_s2_C_tread_KA)
    add_subdirectory(video_s2_tread_KA_pp)
    add_subdirectory(video_s2_C_KA)
    add_subdirectory(video_s2_KA_pp)    
    add_subdirectory(PredSim_mtpPin_cm0)
    add_subdirectory(PredSim_mtpPin_cm3)
    add_subdirectory(PredSim_mtpPin_cm4)
    add_subdirectory(PredSim_mtpPin_cm7)
	add_subdirectory(PredSim_mtpPin_cm8)
    add_subdirectory(PredSim_mtpPin_pp_cm0)
    add_subdirectory(PredSim_mtpPin_pp_cm3)
    add_subdirectory(PredSim_mtpPin_pp_cm4)
    add_subdirectory(PredSim_mtpPin_pp_cm7)
	add_subdirectory(PredSim_mtpPin_pp_cm8)
    add_subdirectory(PredSim_no_mtpPin_cm0)
    add_subdirectory(PredSim_no_mtpPin_cm3)
    add_subdirectory(PredSim_no_mtpPin_cm5)
    add_subdirectory(PredSim_no_mtpPin_cm6)
    add_subdirectory(PredSim_no_mtpPin_pp_cm0)
    add_subdirectory(PredSim_no_mtpPin_pp_cm3)
    add_subdirectory(PredSim_no_mtpPin_pp_cm5)
    add_subdirectory(PredSim_no_mtpPin_pp_cm6)
    add_subdirectory(mobilecap)
endif()
