include_directories(${OpenSim_SOURCE_DIR}
                    ${OpenSim_SOURCE_DIR}/Vendors)
                    
option(BUILD_EXTERNAL_FUNCTIONS
    "Build external functions" ON)
					
if(BUILD_EXTERNAL_FUNCTIONS)    
    add_subdirectory(PredSim)
    add_subdirectory(PredSim_pp)
    add_subdirectory(PredSim_SSCM)
    add_subdirectory(PredSim_SSCM_pp)
    add_subdirectory(TrackSim_1)
    add_subdirectory(TrackSim_2)
    add_subdirectory(PredSimProsthesis)
    add_subdirectory(PredSimProsthesis_pp)
    add_subdirectory(PredSim_v2)
    add_subdirectory(PredSim_v2_pp)
    add_subdirectory(PredSim_2D)
    add_subdirectory(PredSim_2D_pp)
    add_subdirectory(video_s1_A_tread_KA)
    add_subdirectory(video_s1_C_tread_KA)
    add_subdirectory(video_s1_tread_KA_pp)
    add_subdirectory(video_s1_A_tread)
    add_subdirectory(video_s1_B_tread)
    add_subdirectory(video_s1_C_tread)
    add_subdirectory(video_s1_tread_pp)
    add_subdirectory(video_s2_C_tread_KA)
    add_subdirectory(video_s2_tread_KA_pp)
    add_subdirectory(video_s2_C_KA)
    add_subdirectory(video_s2_KA_pp)    
    add_subdirectory(PredSim_mtpPin_cm0)
    add_subdirectory(PredSim_mtpPin_cm3)
    add_subdirectory(PredSim_mtpPin_cm4)
    add_subdirectory(PredSim_mtpPin_cm7)
	add_subdirectory(PredSim_mtpPin_cm8)
    add_subdirectory(PredSim_mtpPin_pp_cm0)
    add_subdirectory(PredSim_mtpPin_pp_cm3)
    add_subdirectory(PredSim_mtpPin_pp_cm4)
    add_subdirectory(PredSim_mtpPin_pp_cm7)
	add_subdirectory(PredSim_mtpPin_pp_cm8)
    add_subdirectory(PredSim_no_mtpPin_cm0)
    add_subdirectory(PredSim_no_mtpPin_cm3)
    add_subdirectory(PredSim_no_mtpPin_cm5)
    add_subdirectory(PredSim_no_mtpPin_cm6)
    add_subdirectory(PredSim_no_mtpPin_pp_cm0)
    add_subdirectory(PredSim_no_mtpPin_pp_cm3)
    add_subdirectory(PredSim_no_mtpPin_pp_cm5)
    add_subdirectory(PredSim_no_mtpPin_pp_cm6)
    add_subdirectory(mobilecap_squat_t1)
    add_subdirectory(mobilecap_squat_t2)
    add_subdirectory(mobilecap_squat_t2_pp)  
    add_subdirectory(mobilecap_squat_t3)
    add_subdirectory(mobilecap_squat_t3_pp)
    add_subdirectory(s2_TrackSim_mtpPin_1)
    add_subdirectory(s2_TrackSim_mtpPin_2_6cs)
    add_subdirectory(s2_PredSim_mtpPin_ss)
    add_subdirectory(s2_PredSim_mtpPin_ss_pp) 
    add_subdirectory(s2_PredSim_mtpPin_ge)
    add_subdirectory(s2_PredSim_mtpPin_ge_pp)
    add_subdirectory(s2_PredSim_no_mtpPin_ss)
    add_subdirectory(s2_PredSim_no_mtpPin_ss_pp) 
    add_subdirectory(s2_PredSim_no_mtpPin_ge)
    add_subdirectory(s2_PredSim_no_mtpPin_ge_pp)
    add_subdirectory(s2_PredSim_no_mtpPin_gl)
    add_subdirectory(s2_PredSim_no_mtpPin_gl_pp)
    add_subdirectory(mobilecap_s0)
    add_subdirectory(mobilecap_s0_pp) 
    add_subdirectory(mobilecap_s0_m)
    add_subdirectory(mobilecap_s0_d1)
    add_subdirectory(mobilecap_s0_pp_d1)
    add_subdirectory(mobilecap_s0_pin_pp) 
    add_subdirectory(mobilecap_s0_pin_m)
    add_subdirectory(mobilecap_s0_pin_m_GRF)
    add_subdirectory(mobilecap_s0_pin)
    add_subdirectory(mobilecap_s0_pin_nKA)  
    add_subdirectory(mobilecap_s0_pin_nKA_m)  
    add_subdirectory(mobilecap_s0_pin_nKA_pp)
    add_subdirectory(mobilecap_s0_pin_nKA_d1)  
    add_subdirectory(mobilecap_s0_pin_nKA_d1_m)  
    add_subdirectory(mobilecap_s0_pin_nKA_d1_pp)
    add_subdirectory(mobilecap_s0_pin_nKA_c1)
    add_subdirectory(mobilecap_s0_pin_nKA_c2)
    add_subdirectory(mobilecap_s0_pin_nKA_c2_m)
    add_subdirectory(mobilecap_s0_pin_nKA_c2_pp)
    add_subdirectory(mocap_s0_pin_KA_c1)
    add_subdirectory(mocap_s0_pin_KA_c2)
    add_subdirectory(mocap_s0_pin_KA_c2_pp)
    add_subdirectory(mocap_s0_pin_KA_pp)
    add_subdirectory(mocap_s0_pin_KA)
    add_subdirectory(s2_Pred_no_mtpPin_ge_t10)
    add_subdirectory(s2_Pred_no_mtpPin_ge_t10pp)
    add_subdirectory(s2_Pred_no_mtpPin_ge_t20)
    add_subdirectory(s2_Pred_no_mtpPin_ge_t20pp)
    add_subdirectory(s2_Pred_no_mtpPin_ge_t30)
    add_subdirectory(s2_Pred_no_mtpPin_ge_t30pp)
    add_subdirectory(mobcap_s4_KA_c1)
    add_subdirectory(mobcap_s4_KA_c2)
    add_subdirectory(mobcap_s4_KA_c2_pp)
    add_subdirectory(mobcap_s4_KA)
    add_subdirectory(mobcap_s4_KA_pp)
    add_subdirectory(s2_Pred_no_mtpPin_ge_l10)
    add_subdirectory(s2_Pred_no_mtpPin_ge_l10pp)
    add_subdirectory(s2_Pred_no_mtpPin_ge_l20)
    add_subdirectory(s2_Pred_no_mtpPin_ge_l20pp)
    add_subdirectory(s2_Pred_no_mtpPin_ge_19)
    add_subdirectory(s2_Pred_no_mtpPin_ge_19pp)
    add_subdirectory(s2_Pred_no_mtpPin_ge_19b)
    add_subdirectory(s2_Pred_no_mtpPin_ge_19bpp)
    add_subdirectory(s2_Pred_no_mtpPin_ge_19c)
    add_subdirectory(s2_Pred_no_mtpPin_ge_19cpp)
    add_subdirectory(s2_Pred_no_mtpPin_ge_19d)
    add_subdirectory(s2_Pred_no_mtpPin_ge_19dpp)
    add_subdirectory(s2_Pred_no_mtpPin_ge_19e)
    add_subdirectory(s2_Pred_no_mtpPin_ge_19epp)
    add_subdirectory(s2_Pred_no_mtpPin_ge_19f)
    add_subdirectory(s2_Pred_no_mtpPin_ge_19fpp)
    add_subdirectory(PredSim_no_mtpPin_cm0b)
    add_subdirectory(PredSim_no_mtpPin_pp_cm0b)
    add_subdirectory(s2_Pred_no_mtpPin_ge_19g)
    add_subdirectory(s2_PredSim_no_mtpPin_gb)
    add_subdirectory(s2_PredSim_no_mtpPin_gb_pp)
    add_subdirectory(PredSim_no_mtpPin_cm0c)
    add_subdirectory(PredSim_no_mtpPin_pp_cm0c)
    add_subdirectory(s2_PredSim_no_mtpPin_lb)
    add_subdirectory(s2_PredSim_no_mtpPin_lb_pp)
    add_subdirectory(s2_PredSim_no_mtpPin_sb)
    add_subdirectory(s2_PredSim_no_mtpPin_sb_pp)
    add_subdirectory(s2_PredSim_mtpPin_sb)
    add_subdirectory(s2_PredSim_mtpPin_sb_pp) 
    add_subdirectory(s2_PredSim_mtpPin_gb)
    add_subdirectory(s2_PredSim_mtpPin_gb_pp)
    add_subdirectory(mocap_s4_KA)
    add_subdirectory(mocap_s4_KA_pp)
    add_subdirectory(mocap_s4_KA_c1)
    add_subdirectory(mocap_s4_KA_c2)
    add_subdirectory(mocap_s4_KA_c2_pp)
    add_subdirectory(mocap_s4_raja_KA)
    add_subdirectory(mocap_s4_raja_KA_pp)
    add_subdirectory(mobcap_0422_A1_raja)
    add_subdirectory(mobcap_0422_A1_raja_pp)
    add_subdirectory(mocap_0422_A1_raja)
    add_subdirectory(mocap_0422_A1_raja_pp)
endif()


